<resources>
    <string name="app_name">Bill Splitter</string>
    <string name="bill_total">Bill Total</string>
    <string name="tip_amount">Tip Amount</string>
    <string name="of_people"># of People</string>
    <string name="calculate_bill">Calculate Bill</string>
    <string name="everybody_pays">Everybody Pays:</string>

    <!-- Tip Percentage Spinner -->
    <string-array name="Tip_Pct">
        <item>10%</item>
        <item>12%</item>
        <item>15%</item>
        <item>20%</item>
        <item>25%</item>
        <item>30%</item>
    </string-array>

    <!-- People Spinner -->
    <string-array name="Num_People">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
</resources>